tests/idris2/import008/expected
1/1: Building ImportList (ImportList.idr)
Warning: Could not find requested names in module Data.List: lenght
Error: While processing right hand side of g. Undefined name sort. 

ImportList:7:5--7:9
 3 | f : Ord a => List a -> List a
 4 | f = take 1
 5 | 
 6 | g : Ord a => List a -> List a
 7 | g = sort
         ^^^^
Did you mean: sqrt?
